--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -7,11 +7,11 @@ services:
     volumes:
           - .:/app
     depends_on:
-      - "database"
+      - database
       
   
   database:
-    image: postgres:latest
+    image: postgres:15.3
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
