--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -10,4 +10,4 @@ COPY  . /app
 
 WORKDIR /app
 
-CMD ["python3", "manage.py", "runserver", "0.0.0.0:8000" ]
+CMD ["bash", "-c", "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"]
