--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
-# DB_HOST=database
-DB_HOST=127.0.0.1
+DB_HOST=database
+# DB_HOST=127.0.0.1
