--- a/server/.gitignore
+++ b/server/.gitignore
@@ -113,12 +113,13 @@ celerybeat.pid
 
 # Environments
 .venv
+*.env
 env/
 venv/
 ENV/
 env.bak/
 venv.bak/
-.env
+
 
 # Spyder project settings
 .spyderproject
