--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,9 @@ POSTGRES_PASSWORD=postgres
 POSTGRES_DB=postgres
 DB_HOST=database
 # DB_HOST=127.0.0.1
+
+# Azure database
+DB_HOST=hackathondatabase.postgres.database.azure.com
+POSTGRES_USER=hackathon
+POSTGRES_PASSWORD=postgres1!
+POSTGRES_DB=hackathon
