--- a/server/.env
+++ b/server/.env
@@ -9,3 +9,5 @@ DB_HOST=hackathondatabase.postgres.database.azure.com
 POSTGRES_USER=hackathon
 POSTGRES_PASSWORD=postgres1!
 POSTGRES_DB=hackathon
+
+SUBSCRIPTION_ID=Subid000001-1696691718520
