--- a/server/.env
+++ b/server/.env
@@ -10,4 +10,9 @@ POSTGRES_USER=hackathon
 POSTGRES_PASSWORD=postgres1!
 POSTGRES_DB=hackathon
 
+#BOC API variables
 SUBSCRIPTION_ID=Subid000001-1696691718520
+OATH_URL=https://sandbox-apis.bankofcyprus.com/df-boc-org-sb/sb/psd2
+CLIENT_ID=bd230620-1aa5-4509-858c-81e902d5c7e4
+CLIENT_SECRET=vD7bP6rU3uW5yT7dW7iU1wF5oX6yS5rC2mC8vF5nX0mW6sI2nG
+ORIGIN_USER_ID=50520222
